# azalea_applet

./: Cargo.toml  README.md
src/: connection.rs  lib.rs  runtime.rs
src/widgets/: button.rs  column.rs  container.rs  element.rs  mod.rs  serde_types.rs  space.rs  stack.rs  text.rs  widget.rs
