[package]
name = "azalea_applet"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = { version = "2.0.1", features = ["serde"] }
bytes = "1.10.1"
iced = { version = "0.13.1", features = ["advanced"] }
iced_core = "0.13.2"
iced_layershell = "0.13.7"
serde = { version = "1.0.219", features = ["derive", "rc"] }
tokio = {version = "1.46.0", features = ["rt", "rt-multi-thread", "net", "io-util", "sync", "time"]}
typetag = "0.2.20"
